Adjust api description to map other teams objects
Also suffixed all objects in the description with DTO
