# src/main/java/de/th/koeln/archilab/fae/faeteam2service/position/PositionDTO.java
@@ -6,13 +6,15 @@ import org.springframework.validation.annotation.Validated;
 
 import java.util.Objects;
 
+import javax.validation.constraints.NotNull;
+
 import io.swagger.annotations.ApiModelProperty;
 
 /**
- * Position
+ * PositionDTO
  */
 @Validated
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-01-23T20:04:16.757Z[GMT]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-01-30T16:33:21.467Z[GMT]")
 public class PositionDTO {
     @JsonProperty("laengengrad")
     private Double laengengrad = null;
@@ -30,7 +32,8 @@ public class PositionDTO {
      *
      * @return laengengrad
      **/
-    @ApiModelProperty(example = "51.042755", value = "")
+    @ApiModelProperty(example = "51.042755", required = true, value = "")
+    @NotNull
 
     public Double getLaengengrad() {
         return laengengrad;
@@ -50,7 +53,8 @@ public class PositionDTO {
      *
      * @return breitengrad
      **/
-    @ApiModelProperty(example = "7.287333", value = "")
+    @ApiModelProperty(example = "7.287333", required = true, value = "")
+    @NotNull
 
     public Double getBreitengrad() {
         return breitengrad;
@@ -69,9 +73,9 @@ public class PositionDTO {
         if (o == null || getClass() != o.getClass()) {
             return false;
         }
-        PositionDTO position = (PositionDTO) o;
-        return Objects.equals(this.laengengrad, position.laengengrad) &&
-                Objects.equals(this.breitengrad, position.breitengrad);
+        PositionDTO positionDTO = (PositionDTO) o;
+        return Objects.equals(this.laengengrad, positionDTO.laengengrad) &&
+                Objects.equals(this.breitengrad, positionDTO.breitengrad);
     }
 
     @Override
